trying fixing mobile phone overflow issue

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     scroll-behavior: smooth;
 }
 #wrapper{
-    width: 100%;
+    max-width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
